--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,44 +1,20 @@
 .app {
+  padding-bottom: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 1em;
+  background: url('../../public/img/Resized_EveningSky.JPG') center;
 }
 
-.app form{
+.app-form{
+  margin: 1em 0 1em 0;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 3em;
-}
-
-.app label{
+  flex-direction: column;
+  text-align: center;
   color: white;
-  font-size: larger;
-  margin-right: 1em;
+  font-size: xx-large;
 }
 
-.app input{
-  background-color: #ef8971;
-  border: solid #0d182c 1px;
-  border-radius: 0.4em;
-  margin-left: 0.5em;
-}
-
-.app button{
-  background-color: #ab5f61;
-  border: ridge 2px #0d182c;
-  color: #ef8971;
-  border-radius: 1em;
-  width: 10em;
-  height: 2em;
-}
-
-.app button:hover{
-  background-color: #ab5f61;
-  border: ridge 3px #0d182c;
-  color: white;
-  border-radius: 1em;
-  width: 10.2em;
-  height: 2.3em;
+.app-form-label{
+  align-self: center;
 }
