--- a/src/css/ShowMap.css
+++ b/src/css/ShowMap.css
@@ -5,12 +5,11 @@
   align-items: center;
   text-align: center;
   background: linear-gradient(180deg, rgba(239,137,113,1) 0%, rgba(175,115,113,1) 35%, rgba(171,95,97,1) 63%, rgba(124,84,106,1) 85%, rgba(13,24,44,1) 100%);
-  border: ridge 10px #0d182c;
-  border-radius: 2em;
+  color: white;
 }
 
 .card-img-cnt{
-  padding: 0.5em;
+  padding-top: 0.5em;
   display: flex;
   justify-content: center;
 }
@@ -20,18 +19,13 @@
   border-radius: 2%;
 }
 
-.card-body{
-  width: 90%;
-  color: white;
-}
-
 .card-body h2{
   font-size: larger;
   font-weight: bold;
   margin-bottom: 0.2em;
 }
 
-.card-title{
-  font-size: xx-large;
+card-title{
+  font-size: 8rem;
   margin-bottom: 0.2em;
 }
