--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,4 @@
 html{
-  background-color: #0d182c;
+  /* background-color: #0d182c; */
+  background: url('./img/Resized_EveningSky02.JPG') center fixed;
 }
