--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,9 +1,9 @@
 .app {
-  padding-bottom: 200px;
+  /* padding-bottom: 200px; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: url('../../public/img/Resized_EveningSky.JPG') center;
+  background: url('../../public/img/Resized_EveningSky.JPG') center fixed;
 }
 
 .app-form{
