Updated all incomming data routes to point to the correct components.  Updated visual styles to best display the weather and movie data

--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,4 @@
 html{
-  /* background-color: #0d182c; */
-  background: url('./img/Resized_EveningSky02.JPG') center fixed;
+  background-color: rgba(13,24,44,1);
+  /* background: url('./img/Resized_EveningSky02.JPG') center fixed; */
 }
