--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,10 +3,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: url('../../public/img/Resized_EveningSky.JPG') center fixed;
+  /* background: url('../../public/img/Resized_EveningSky.JPG') center fixed; */
+  background-color: rgba(13,24,44,1);
 }
 
-.app-form{
+.app-form {
   margin: 1em 0 1em 0;
   display: flex;
   flex-direction: column;
@@ -15,6 +16,12 @@
   font-size: xx-large;
 }
 
-.app-form-label{
+.app-form-label {
   align-self: center;
+}
+
+.movie-cnt {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
 }
